[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/SettingMenu.gd" type="Script" id=1]
[ext_resource path="res://art/UI/godot match 3 settings bar.png" type="Texture" id=2]
[ext_resource path="res://art/UI/Buttons/Make Color Bomb Button.png" type="Texture" id=3]
[ext_resource path="res://art/UI/Buttons/Sound Button 2.png" type="Texture" id=4]
[ext_resource path="res://art/UI/Buttons/Back Button.png" type="Texture" id=5]


[sub_resource type="Animation" id=1]
resource_name = "slide_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 576, 0 ), Vector2( 0, 0 ) ]
}

[node name="SettingMenu" type="CanvasLayer"]
offset = Vector2( 576, 0 )
transform = Transform2D( 1, 0, 0, 1, 576, 0 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Graphic and button" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 556.0
margin_bottom = 1004.0
custom_constants/separation = 30

[node name="Graphic" type="TextureRect" parent="MarginContainer/Graphic and button"]
margin_right = 536.0
margin_bottom = 488.0
rect_min_size = Vector2( 488, 488 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Button" type="VBoxContainer" parent="MarginContainer/Graphic and button"]
margin_top = 518.0
margin_right = 536.0
margin_bottom = 913.0
custom_constants/separation = 20

[node name="theme" type="TextureButton" parent="MarginContainer/Graphic and button/Button"]
margin_right = 536.0
margin_bottom = 99.0
rect_min_size = Vector2( 512, 99 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="sound" type="TextureButton" parent="MarginContainer/Graphic and button/Button"]
margin_top = 119.0
margin_right = 536.0
margin_bottom = 247.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="back" type="TextureButton" parent="MarginContainer/Graphic and button/Button"]
margin_top = 267.0
margin_right = 536.0
margin_bottom = 395.0
rect_min_size = Vector2( 512, 128 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 1 )
[connection signal="pressed" from="MarginContainer/Graphic and button/Button/theme" to="." method="_on_theme_pressed"]
[connection signal="pressed" from="MarginContainer/Graphic and button/Button/sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="MarginContainer/Graphic and button/Button/back" to="." method="_on_back_pressed"]
